--- a/environments/py-3.12-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.12-linux-64-dev.conda.lock.yml
@@ -35,12 +35,12 @@ dependencies:
   - certifi=2025.4.26=pyhd8ed1ab_0
   - cffi=1.17.1=py312h06ac9bb_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
-  - click=8.2.0=pyh707e725_0
+  - click=8.2.1=pyh707e725_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.2=py312h68727a3_0
-  - coverage=7.8.0=py312h178313f_0
+  - coverage=7.8.2=py312h178313f_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py312h66e93f0_0
   - dask-core=2025.3.0=pyhd8ed1ab_0
@@ -59,7 +59,7 @@ dependencies:
   - fonttools=4.58.0=py312h178313f_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=ha770c72_1
-  - fsspec=2025.3.2=pyhd8ed1ab_0
+  - fsspec=2025.5.1=pyhd8ed1ab_0
   - geoana=0.7.2=py312hc39e661_0
   - greenlet=3.2.2=py312h2ec8cdc_0
   - h11=0.16.0=pyhd8ed1ab_0
@@ -73,8 +73,8 @@ dependencies:
   - icu=75.1=he02047a_0
   - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=8.6.1=pyha770c72_0
-  - importlib_metadata=8.6.1=hd8ed1ab_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - importlib_metadata=8.7.0=h40b2b14_1
   - importlib_resources=6.5.2=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - ipykernel=6.29.5=pyh3099207_0
@@ -86,21 +86,21 @@ dependencies:
   - isort=6.0.1=pyhd8ed1ab_1
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=pyhd8ed1ab_0
-  - joblib=1.5.0=pyhd8ed1ab_0
+  - joblib=1.5.1=pyhd8ed1ab_0
   - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py312h7900ff3_1
-  - jsonschema=4.23.0=pyhd8ed1ab_1
+  - jsonschema=4.24.0=pyhd8ed1ab_0
   - jsonschema-specifications=2025.4.1=pyh29332c3_0
-  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
+  - jsonschema-with-format-nongpl=4.24.0=hd8ed1ab_0
   - jupyter-book=1.0.3=pyhd8ed1ab_1
   - jupyter-cache=1.0.1=pyhff2d567_0
   - jupyter-lsp=2.2.5=pyhd8ed1ab_1
   - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
+  - jupyter_core=5.8.1=pyh31011fe_0
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.16.0=pyhe01879c_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.2=pyhd8ed1ab_0
+  - jupyterlab=4.4.3=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
@@ -153,7 +153,7 @@ dependencies:
   - libxml2=2.13.8=h4bc477f_0
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.4=h024ca30_0
+  - llvm-openmp=20.1.5=h024ca30_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h178313f_1
@@ -178,7 +178,7 @@ dependencies:
   - nbformat=5.10.4=pyhd8ed1ab_1
   - ncurses=6.5=h2d0b736_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - notebook=7.4.2=pyhd8ed1ab_0
+  - notebook=7.4.3=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numcodecs=0.15.1=py312hf9745cd_0
   - numpy=1.26.4=py312heda63a1_0
@@ -187,7 +187,7 @@ dependencies:
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
   - pandas=2.2.3=py312hf9745cd_3
-  - pandoc=3.6.4=ha770c72_0
+  - pandoc=3.7.0.1=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
   - partd=1.4.2=pyhd8ed1ab_0
@@ -197,8 +197,8 @@ dependencies:
   - pip=25.1.1=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.8=pyhe01879c_0
-  - pluggy=1.5.0=pyhd8ed1ab_1
-  - prometheus_client=0.21.1=pyhd8ed1ab_0
+  - pluggy=1.6.0=pyhd8ed1ab_0
+  - prometheus_client=0.22.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.51=pyha770c72_0
   - psutil=7.0.0=py312h66e93f0_0
   - pthread-stubs=0.4=hb9d3cd8_1002
@@ -234,14 +234,14 @@ dependencies:
   - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.24.0=py312h3b7be25_0
+  - rpds-py=0.25.1=py312h680f630_0
   - scikit-learn=1.4.2=py312h1fcc3ea_1
   - scipy=1.14.1=py312h62794b6_2
   - send2trash=1.8.3=pyh0d859eb_1
-  - setuptools=80.1.0=pyhff2d567_0
+  - setuptools=80.8.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sniffio=1.3.1=pyhd8ed1ab_1
-  - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  - snowballstemmer=3.0.1=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - soupsieve=2.7=pyhd8ed1ab_0
   - sphinx=5.3.0=pyhd8ed1ab_0
@@ -274,12 +274,12 @@ dependencies:
   - tomli=2.2.1=pyhd8ed1ab_1
   - tomlkit=0.13.2=pyha770c72_1
   - toolz=1.0.0=pyhd8ed1ab_1
-  - tornado=6.4.2=py312h66e93f0_0
+  - tornado=6.5.1=py312h66e93f0_0
   - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
-  - types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
+  - types-python-dateutil=2.9.0.20250516=pyhd8ed1ab_0
   - typing-extensions=4.13.2=h0e9735f_0
-  - typing-inspection=0.4.0=pyhd8ed1ab_0
+  - typing-inspection=0.4.1=pyhd8ed1ab_0
   - typing_extensions=4.13.2=pyh29332c3_0
   - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
@@ -301,13 +301,13 @@ dependencies:
   - zarr=2.14.2=pyhd8ed1ab_0
   - zeromq=4.3.5=h3b0a872_7
   - zict=3.0.0=pyhd8ed1ab_1
-  - zipp=3.21.0=pyhd8ed1ab_1
+  - zipp=3.22.0=pyhd8ed1ab_0
   - zstandard=0.23.0=py312h66e93f0_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@388f8f781c834f8f1d5c6243e636112bd2fd4dcb
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@2b2b72f906d85bf460292f66e763ff2331017b02
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@24027d81b65df99d5f582acc4497ed33df8a3396
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@5f2b6d8d7fb5f5287f2af0e1231daa1350b7183f
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e9c99d6fd5d324571a2717990aecb3ed673cbaca
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
 
