--- a/environments/py-3.11-win-64.conda.lock.yml
+++ b/environments/py-3.11-win-64.conda.lock.yml
@@ -14,10 +14,10 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_3
   - brotli-python=1.1.0=py311hda3d55a_3
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2025.4.26=h4c7d964_0
+  - ca-certificates=2025.6.15=h4c7d964_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.4.26=pyhd8ed1ab_0
+  - certifi=2025.6.15=pyhd8ed1ab_0
   - cffi=1.17.1=py311he736701_0
   - click=8.2.1=pyh7428d3b_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
@@ -30,7 +30,7 @@ dependencies:
   - discretize=0.11.3=py311h9b10771_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.2=py311h5082efb_0
+  - fonttools=4.58.4=py311h5082efb_0
   - freetype=2.13.3=h57928b3_1
   - fsspec=2025.5.1=pyhd8ed1ab_0
   - geoana=0.7.2=py311h9b10771_0
@@ -47,7 +47,7 @@ dependencies:
   - krb5=1.21.3=hdf4eb48_0
   - lcms2=2.17=hbcf6048_0
   - lerc=4.0.0=h6470a55_1
-  - libaec=1.1.3=h63175ca_0
+  - libaec=1.1.4=h20038f6_0
   - libblas=3.9.0=31_h641d27c_mkl
   - libbrotlicommon=1.1.0=h2466b09_3
   - libbrotlidec=1.1.0=h2466b09_3
@@ -67,7 +67,7 @@ dependencies:
   - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_2
-  - libpng=1.6.47=h7a4582a_0
+  - libpng=1.6.49=h7a4582a_0
   - libsqlite=3.50.1=h67fdade_0
   - libssh2=1.11.1=h9aa295b_0
   - libtiff=4.7.0=h05922d8_5
@@ -76,14 +76,14 @@ dependencies:
   - libxcb=1.17.0=h0e4246c_0
   - libxml2=2.13.8=h442d1da_0
   - libzlib=1.3.1=h2466b09_2
-  - llvm-openmp=20.1.6=h30eaf37_0
+  - llvm-openmp=20.1.7=h30eaf37_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py311h5082efb_1
   - matplotlib-base=3.8.4=py311h9b31f6e_2
   - mkl=2024.2.2=h66d3029_15
-  - msgpack-python=1.1.0=py311h3257749_0
+  - msgpack-python=1.1.1=py311h3257749_0
   - mumps-seq=5.7.3=hbaa6519_10
-  - munkres=1.1.4=pyh9f0ad1d_0
+  - munkres=1.1.4=pyhd8ed1ab_1
   - numcodecs=0.15.1=py311hcf9f919_0
   - numpy=1.26.4=py311h0b4df5a_0
   - openjpeg=2.5.3=h4d64b90_0
@@ -96,7 +96,7 @@ dependencies:
   - psutil=7.0.0=py311he736701_0
   - pthread-stubs=0.4=h0e40799_1002
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.4=pyh3cfb1c2_0
+  - pydantic=2.11.7=pyh3cfb1c2_0
   - pydantic-core=2.33.2=py311hc4022dc_0
   - pydiso=0.1.2=py311h66870c1_0
   - pymatsolver=0.3.1=pyh48887ae_201
@@ -127,7 +127,7 @@ dependencies:
   - tzdata=2025b=h78e105d_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py311he736701_0
-  - urllib3=2.4.0=pyhd8ed1ab_0
+  - urllib3=2.5.0=pyhd8ed1ab_0
   - vc=14.3=h2b53caa_26
   - vc14_runtime=14.42.34438=hfd919c2_26
   - vs2015_runtime=14.42.34438=h7142326_26
@@ -144,8 +144,8 @@ dependencies:
   - zstandard=0.23.0=py311he736701_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@8d46ccb686e4206683862ec803fc709b26271cd8
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@585c89094e3eff35df10d3076964bf154b24d575
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@91ec5c45ff7357cd8f2bdb75dc61c55fdd6459b5
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@1190a239fd7406fbe0b73169c3d8406a1aacae3e
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
