--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -29,10 +29,10 @@ dependencies:
   - brotli-python=1.1.0=py310hf71b8c6_3
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - ca-certificates=2025.6.15=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.4.26=pyhd8ed1ab_0
+  - certifi=2025.6.15=pyhd8ed1ab_0
   - cffi=1.17.1=py310h8deb56e_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.2.1=pyh707e725_0
@@ -40,7 +40,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.2=py310h3788b33_0
-  - coverage=7.8.2=py310h89163eb_0
+  - coverage=7.9.1=py310h89163eb_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py310ha75aee5_0
   - dask-core=2025.3.0=pyhd8ed1ab_0
@@ -55,7 +55,7 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.2=py310h89163eb_0
+  - fonttools=4.58.4=py310h89163eb_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=ha770c72_1
   - fsspec=2025.5.1=pyhd8ed1ab_0
@@ -108,9 +108,9 @@ dependencies:
   - krb5=1.21.3=h659f571_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.43=h712a8e2_4
+  - ld_impl_linux-64=2.43=h1423503_5
   - lerc=4.0.0=h0aef613_1
-  - libaec=1.1.3=h59595ed_0
+  - libaec=1.1.4=h3f801dc_0
   - libblas=3.9.0=31_hfdb39a5_mkl
   - libbrotlicommon=1.1.0=hb9d3cd8_3
   - libbrotlidec=1.1.0=hb9d3cd8_3
@@ -135,8 +135,8 @@ dependencies:
   - liblapack=3.9.0=31_hc41d3b0_mkl
   - liblzma=5.8.1=hb9d3cd8_2
   - libnghttp2=1.64.0=h161d5f1_0
-  - libnsl=2.0.1=hd590300_0
-  - libpng=1.6.47=h943b412_0
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libpng=1.6.49=h943b412_0
   - libscotch=7.0.6=hea33c07_1
   - libsodium=1.0.20=h4ab18f5_0
   - libsqlite=3.50.1=hee588c1_0
@@ -151,7 +151,7 @@ dependencies:
   - libxml2=2.13.8=h4bc477f_0
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.6=h024ca30_0
+  - llvm-openmp=20.1.7=h024ca30_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py310h89163eb_1
@@ -163,10 +163,10 @@ dependencies:
   - metis=5.1.0=hd0bcaf9_1007
   - mistune=3.1.3=pyh29332c3_0
   - mkl=2024.2.2=ha957f24_16
-  - msgpack-python=1.1.0=py310h3788b33_0
+  - msgpack-python=1.1.1=py310h3788b33_0
   - mumps-include=5.7.3=h82cca05_10
   - mumps-seq=5.7.3=h06cbf8f_10
-  - munkres=1.1.4=pyh9f0ad1d_0
+  - munkres=1.1.4=pyhd8ed1ab_1
   - myst-nb=1.2.0=pyh29332c3_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
   - nbclient=0.10.2=pyhd8ed1ab_0
@@ -205,7 +205,7 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_3
   - pybtex-docutils=1.0.3=py310hff52083_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.4=pyh3cfb1c2_0
+  - pydantic=2.11.7=pyh3cfb1c2_0
   - pydantic-core=2.33.2=py310hbcd0ec0_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h69a6472_0
@@ -214,8 +214,8 @@ dependencies:
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha55dd90_7
-  - pytest=8.4.0=pyhd8ed1ab_0
-  - pytest-cov=6.1.1=pyhd8ed1ab_0
+  - pytest=8.4.1=pyhd8ed1ab_0
+  - pytest-cov=6.2.1=pyhd8ed1ab_0
   - python=3.10.18=hd6af730_0_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
@@ -225,7 +225,7 @@ dependencies:
   - python_abi=3.10=7_cp310
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py310h89163eb_2
-  - pyzmq=26.4.0=py310h71f11fc_0
+  - pyzmq=27.0.0=py310h71f11fc_0
   - readline=8.2=h8c095d6_2
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
   - referencing=0.36.2=pyh29332c3_0
@@ -284,7 +284,7 @@ dependencies:
   - uc-micro-py=1.0.3=pyhd8ed1ab_1
   - unicodedata2=16.0.0=py310ha75aee5_0
   - uri-template=1.3.0=pyhd8ed1ab_1
-  - urllib3=2.4.0=pyhd8ed1ab_0
+  - urllib3=2.5.0=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - webcolors=24.11.1=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_3
@@ -302,11 +302,11 @@ dependencies:
   - zstandard=0.23.0=py310ha75aee5_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@8d46ccb686e4206683862ec803fc709b26271cd8
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@585c89094e3eff35df10d3076964bf154b24d575
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@91ec5c45ff7357cd8f2bdb75dc61c55fdd6459b5
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
 variables:
   KMP_WARNINGS: 0
