--- a/environments/py-3.12-win-64-dev.conda.lock.yml
+++ b/environments/py-3.12-win-64-dev.conda.lock.yml
@@ -28,10 +28,10 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_3
   - brotli-python=1.1.0=py312h275cf98_3
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2025.4.26=h4c7d964_0
+  - ca-certificates=2025.6.15=h4c7d964_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.4.26=pyhd8ed1ab_0
+  - certifi=2025.6.15=pyhd8ed1ab_0
   - cffi=1.17.1=py312h4389bb4_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.2.1=pyh7428d3b_0
@@ -39,7 +39,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.2=py312hd5eb7cc_0
-  - coverage=7.8.2=py312h31fea79_0
+  - coverage=7.9.1=py312h31fea79_0
   - cpython=3.12.11=py312hd8ed1ab_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py312h4389bb4_0
@@ -56,7 +56,7 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.2=py312h31fea79_0
+  - fonttools=4.58.4=py312h31fea79_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=h57928b3_1
   - fsspec=2025.5.1=pyhd8ed1ab_0
@@ -110,7 +110,7 @@ dependencies:
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=hbcf6048_0
   - lerc=4.0.0=h6470a55_1
-  - libaec=1.1.3=h63175ca_0
+  - libaec=1.1.4=h20038f6_0
   - libblas=3.9.0=31_h641d27c_mkl
   - libbrotlicommon=1.1.0=h2466b09_3
   - libbrotlidec=1.1.0=h2466b09_3
@@ -130,7 +130,7 @@ dependencies:
   - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_2
-  - libpng=1.6.47=h7a4582a_0
+  - libpng=1.6.49=h7a4582a_0
   - libsodium=1.0.20=hc70643c_0
   - libsqlite=3.50.1=h67fdade_0
   - libssh2=1.11.1=h9aa295b_0
@@ -141,7 +141,7 @@ dependencies:
   - libxml2=2.13.8=h442d1da_0
   - libzlib=1.3.1=h2466b09_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.6=h30eaf37_0
+  - llvm-openmp=20.1.7=h30eaf37_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h31fea79_1
@@ -152,9 +152,9 @@ dependencies:
   - mdurl=0.1.2=pyhd8ed1ab_1
   - mistune=3.1.3=pyh29332c3_0
   - mkl=2024.2.2=h66d3029_15
-  - msgpack-python=1.1.0=py312hd5eb7cc_0
+  - msgpack-python=1.1.1=py312hd5eb7cc_0
   - mumps-seq=5.7.3=hbaa6519_10
-  - munkres=1.1.4=pyh9f0ad1d_0
+  - munkres=1.1.4=pyhd8ed1ab_1
   - myst-nb=1.2.0=pyh29332c3_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
   - nbclient=0.10.2=pyhd8ed1ab_0
@@ -190,7 +190,7 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_3
   - pybtex-docutils=1.0.3=py312h2e8e312_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.4=pyh3cfb1c2_0
+  - pydantic=2.11.7=pyh3cfb1c2_0
   - pydantic-core=2.33.2=py312h8422cdd_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py312h01acb21_0
@@ -199,8 +199,8 @@ dependencies:
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyh09c184e_7
-  - pytest=8.4.0=pyhd8ed1ab_0
-  - pytest-cov=6.1.1=pyhd8ed1ab_0
+  - pytest=8.4.1=pyhd8ed1ab_0
+  - pytest-cov=6.2.1=pyhd8ed1ab_0
   - python=3.12.11=h3f84c4b_0_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
@@ -212,7 +212,7 @@ dependencies:
   - pywin32=307=py312h275cf98_3
   - pywinpty=2.0.15=py312h275cf98_0
   - pyyaml=6.0.2=py312h31fea79_2
-  - pyzmq=26.4.0=py312hd7027bb_0
+  - pyzmq=27.0.0=py312hd7027bb_0
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
   - referencing=0.36.2=pyh29332c3_0
   - requests=2.32.4=pyhd8ed1ab_0
@@ -271,7 +271,7 @@ dependencies:
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py312h4389bb4_0
   - uri-template=1.3.0=pyhd8ed1ab_1
-  - urllib3=2.4.0=pyhd8ed1ab_0
+  - urllib3=2.5.0=pyhd8ed1ab_0
   - vc=14.3=h2b53caa_26
   - vc14_runtime=14.42.34438=hfd919c2_26
   - vs2015_runtime=14.42.34438=h7142326_26
@@ -295,11 +295,11 @@ dependencies:
   - zstandard=0.23.0=py312h4389bb4_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@8d46ccb686e4206683862ec803fc709b26271cd8
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@585c89094e3eff35df10d3076964bf154b24d575
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@91ec5c45ff7357cd8f2bdb75dc61c55fdd6459b5
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@d5959a0e19b45a89eb8a02cd608bc8accb74adb7
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
 variables:
   KMP_WARNINGS: 0
