--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,9 +63,11 @@ discretize = "0.11.*"  # also in simpeg, octree-creation-app
 distributed = ">=2025.3, <2025.4.dev"  # for dask[distributed]
 numpy = "~1.26.0" # also in geoh5py, simpeg
 pydantic = "^2.5.2"  # also in geoh5py, curve-apps, geoapps-utils
+Rtree = "~1.2.0"
 scikit-learn = "~1.4.0"
 scipy = "~1.14.0"
 tqdm = "^4.66.1"
+trimesh = "~4.1.3"
 
 # solvers for simpeg: not imported, but at least one required at runtime
 pydiso = ">=0.1.0, <0.2.dev"
