--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.geoh5 filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
 *.min.js filter=lfs diff=lfs merge=lfs -text
