--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,13 @@
-[tool.poetry]
+[project]
 name = "simpeg-drivers"
 version = "0.4.0-alpha.1"
 description = "Application to run SimPEG inversions with geoh5 files from Geoscience Analyst."
-license = "MIT"
-authors = ["Mira Geoscience <support@mirageoscience.com>"]
+license = { text = "MIT" }
+authors = [{ name = "Mira Geoscience", email = "support@mirageoscience.com" }]
 maintainers = [
-    "Benjamin Kary <benjamink@mirageoscience.com>",
-    "Dominique Fournier <dominiquef@mirageoscience.com>",
+  { name = "Benjamin Kary", email = "benjamink@mirageoscience.com" },
+  { name = "Dominique Fournier", email = "dominiquef@mirageoscience.com" }
 ]
-repository = "https://github.com/MiraGeoscience/simpeg-drivers"
-documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
-homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
 readme = "package.rst"
 
 keywords = [
@@ -39,6 +36,10 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
+dynamic = ["dependencies"]
+
+requires-python = ">=3.10,<4.0"
+
 packages = [
      { include = "simpeg_drivers" },
      { include = "simpeg_drivers-assets" },
@@ -52,6 +53,11 @@ include = [
     { path = "THIRD_PARTY_SOFTWARE.rst" },
     { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
 ]
+
+[project.urls]
+repository = "https://github.com/MiraGeoscience/simpeg-drivers"
+documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
+homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
 
 [tool.poetry.dependencies]
 python = "^3.10"
