--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
 [build-system]
-requires = ["poetry-core>=1.0.0", "setuptools"]
+requires = ["poetry-core>=1.8.0"]
 build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "simpeg-drivers"
 version = "0.4.0-alpha.1"
+
+dynamic = ["dependencies"]
+
+requires-python = ">=3.10,<4.0"
+
 description = "Application to run SimPEG inversions with geoh5 files from Geoscience Analyst."
 license = { text = "MIT" }
 authors = [{ name = "Mira Geoscience", email = "support@mirageoscience.com" }]
@@ -14,9 +19,7 @@ maintainers = [
 ]
 readme = "package.rst"
 
-dynamic = ["dependencies"]
 
-requires-python = ">=3.10,<4.0"
 
 keywords = [
     "direct current resistivity",
